2008-10-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Build native ecj for ecj builds when
	gcj is available.
	* acinclude.m4:
	Make configure output more explicit and readable.
	* configure.ac:
	Check for gcj, and make output more explicit
	and readable.
	* javac.in: Use native ecj when available.

2008-10-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Fix LiveConnect and PulseAudio paths to work
	when srcdir != builddir.

2008-10-20  Alon Bar-Lev  <alon.barlev@gmail.com>

	PR icedtea/224:
	* configure.ac:
	Correct use of --enable options.
	
2008-10-19  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (jtregcheck): Cleanup processes.

2008-10-19  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-cacao-ignore-jdi-tests.patch: Ignore jdi tests,
	not yet implemented in cacao.
	* patches/icedtea-cacao-ignore-tests.patch: Ignore long running failing
	tests, be nice with build daemoms: ProducerConsumerLoops.
	* Makefile.am: Apply patches when configured with --enable-cacao.

2008-10-17  Deepak Bhole  <dbhole@redhat.com>

	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Make applet size
	factors doubles instead of ints. 

2008-10-18  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am: Write a summary of the jtreg test results.

2008-10-18  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (stamps/patch{,-fsg,-ecj}.stamp): Fail if patches don't
	apply, call $(HG) only if it exists.

2008-10-17  Deepak Bhole  <dbhole@redhat.com>

	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Re-encode <, > and &
	characters in applet params.

2008-10-17  Deepak Bhole  <dbhole@redhat.com>

	* plugin/icedtea/netscape/javascript/JSObject.java: Handle null args to
	call() (bug# 217).

2008-10-17  Matthias Klose  <doko@ubuntu.com>

	* IcedTeaPlugin.cc: Don't use open if's in macros; cache getenv() call.

2008-10-17  Gary Benson  <gbenson@redhat.com>

	PR icedtea/203:
	* ports/hotspot/src/share/vm/shark/sharkCacheDecache.cpp